k8s-server/k8s-server-dp-svc.yaml

apiVersion: v1
kind: Service
metadata: 	#Service的元数据
  name: k8s-server-svc
  namespace: k8s-admin
  labels:
    app: k8s-server-svc
spec:
  type: NodePort	#Service暴露类型
  selector:		#Pod选择器，选择前面定义的Pod
    app: k8s-server
  ports:	#端口和协议
  - port: 9090
    targetPort: 9090
    nodePort: 30025
